Add client
